src/test/deca/syntax/invalid/extendincorrecte.deca
// Description:
//    extend fichier inexistant
//
// Resultats:
//    Une erreur de compilation
//
// Historique:
//    cree le 04/01/2023
class Pangolin_a_queu extends Animal{

}